# stock-data-pipeline-project

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  README.md  aws-credentials.txt  pyproject.toml  requirements.txt
.github/workflows/: dbt_ci.yml  dbt_cleanup.yml  dbt_manual_prod_full_refresh.yml  dbt_prod.yml  python_ingestion_ci.yml
airflow_manager/.astro/: config.yaml
airflow_manager/dags/: stock_data_daily_dag.py
data/: fortune_50_companies_jan_2026.csv
dbt_snowflake/: .gitignore  .user.yml  dbt_project.yml
dbt_snowflake/models/bronze/: source.yml
dbt_snowflake/seeds/: fortune_50_companies_jan_2026.csv
dbt_snowflake_pipeline/: .user.yml  dbt_project.yml  profiles.yml
dbt_snowflake_pipeline/macros/: clean_numeric_string.sql  generate_database_name.sql  generate_schema_name.sql  get_custom_schema.sql
dbt_snowflake_pipeline/models/bronze/: source.yml  stg_f50_company_details.sql  stg_f50_company_details.yml  stg_stock_prices.sql  stg_stock_prices.yml
dbt_snowflake_pipeline/seeds/: fortune_50_companies_jan_2026.csv
notebooks/: test_ingestion_stock_data_alphavantage.ipynb
scripts/: ingest_historical_stock_data.py  ingest_last7days_stock_data.py  test_s3_connection.py
tests/: test_ingestion.py
