[project]
name = "stock-data-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.2"
dependencies = [
    "boto3>=1.42.29",
    "dbt-core>=1.11.2",
    "dbt-snowflake>=1.11.1",
    "dotenv>=0.9.9",
    "moto>=5.1.20",
    "pandas>=2.3.3",
    "pre-commit>=4.5.1",
    "pyarrow>=22.0.0",
    "pytest>=9.0.2",
    "requests-mock>=1.12.1",
    "ruff>=0.14.14",
    "sqlfluff-templater-dbt>=4.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
